# dynSGL

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/inputs/: stock_metadata.csv  stock_sectors.csv
dynsgl/data/: __init__.py  smooth.py
dynsgl/graphlearning/: dynamic_signed.py  static_signed.py
scripts/: experiment1.py  experiment2.py  project_path.py  stock_data.py
src/data/: edge_swap.py  graphs.py  signed.py
src/graphlearning/: dynamic_signed.py  static_signed.py
